confined to single page

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 html {
-  height: 100%;
+  /* height: 100%; */
   background: radial-gradient(circle, white, rgba(196, 189, 189, 0.842));
 }
 #container {
-  height: 600px;
+  height: 568px;
   width: 750px;
   background: #9dd2ea;
   margin: 0 auto;
@@ -70,11 +70,12 @@ html {
   height: 21px;
   padding: 10px;
   position: absolute;
-  top: 0;
+  /* top: 0.2; */
   background: rgba(181, 235, 36, 0.78);
   border-radius: 3px;
   box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
   display: none;
+  transform: translateY(-5px);
 }
 #gameover {
   height: 200px;
