--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 4px 0px 0px #009de4;
-  position: relative;
+  position: relative;  
 }
 #score {
   background: #f1ff92;
@@ -82,15 +82,26 @@ html {
   width: 500px;
   background: linear-gradient(#f3ca6b, #f3706c);
   color: white;
-  font-size: 2.5em;
+  font-size: 2.5em; 
   text-align: center;
   text-transform: uppercase;
-  position: absolute;
+  /* position: absolute;
   top: 200px;
-  left: 520px;
+  left: 520px; */
   z-index: 2;
   display: none;
   line-height: 20px;
+  
+  /* margin-bottom: 50% !important; */
+  /* display: inline-block; */
+  transform: translateY(-240%);
+  margin-left: 33.6%;
+
+}
+@media screen and (max-width:400px){
+  #gameover{
+    margin-left: 40%;
+  }
 }
 .life {
   width: 16px;
